# switchboard

./: .gitignore  .mcp.json  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ledger-gate.yml
demos/: README.md  button_app.py  hosted_notes.py  idle_messenger.py  pair_code.py  pair_share.py  pair_spawned.py  switchboard_demos_mcp.py  urgency.py
ledger/: check.py  roll.json  tree.py
switchboard/: __init__.py  __main__.py  _tools.py  boundary.py  client.py  core.py  daemon.py  discovery.py  embed.py  hooks.py  install.py  mcp_server.py  protocol.py  registry.py  servicer.py  wal.py
tests/: test_embed.py  test_hooks.py  test_install.py  test_registry.py  test_switchboard.py
