[project]
name = "switchboard"
version = "0.0.1"
description = "A channel for an app to borrow the user's live AI-client session: the app sends a request, the session services it, the result comes back — every request recorded, one app paired at a time. Local daemon or embedded in a hosted app."
readme = "README.md"
requires-python = ">=3.11"
# The channel's two runtime faces. `mcp` is the surface the client mounts (the pairing
# tool and the return path); `flight-recorder` instruments the boundary and records every
# tool call from the first commit. quern is dev-only — it holds the design ledger, not the
# runtime state (the switchboard brokers messages, it is not a quern tree).
dependencies = ["mcp>=1.28", "flight-recorder"]

# The CLI on PATH, so a hook can name an absolute command instead of `uv run python -m
# switchboard` — which only ever resolved while the session sat in this project.
[project.scripts]
switchboard = "switchboard.__main__:cli"

[dependency-groups]
# The design ledger — the channel's own decisions as data a rule can go red on.
#     uv run --group ledger python -m ledger.check
ledger = ["quern"]
# uvicorn stands the embeddable channel's ASGI surface up on a real loopback port so the
# embed test drives it with a real MCP client — a hosted app brings its own ASGI server.
dev = ["pytest>=8", "uvicorn>=0.30"]

[tool.uv.sources]
# Pinned by rev, always — the estate's fork-or-republish doctrine over resolver algebra.
quern = { git = "https://github.com/xag/quern", rev = "57c4ae1" }
flight-recorder = { git = "https://github.com/xag/flight-recorder", rev = "f23db0c" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["switchboard"]

[tool.pytest.ini_options]
pythonpath = ["."]
